@@ -281,6 +281,20 @@ int RInside::parseEvalQ(const std::string & line) {
     return rc;
 }
 
+// assign for vector< vector< double > >
+void RInside::assign(const std::vector< std::vector< double > > & mat, const std::string & nam) {
+    int nx = mat.size();
+    int ny = mat[0].size();
+    SEXP sexpmat = PROTECT(Rf_allocMatrix(REALSXP, nx, ny));
+    for(int i = 0; i < nx; i++) {
+	for(int j = 0; j < ny; j++) {
+	    REAL(sexpmat)[i + nx*j] = mat[i][j];
+	}
+    }
+    Rf_setVar(Rf_install((char*) nam.c_str()), sexpmat, R_GlobalEnv);  // now set it
+    UNPROTECT(1);
+}
+
 // specializations of Rcpp wrap template
 
 namespace Rcpp{
